# supersonic

./: .env.example  .git-commit-msg.txt  .gitignore  LICENSE  README.md  ROADMAP.md  bootstrap.sh  pyproject.toml  vercel.json
.github/workflows/: ci.yml
app/: dashboard.html  landing.html  onboarding.html
docker/: sandbox.Dockerfile
docs/: ARCHITECTURE.md  DEMO.md  FAQ.md
scripts/: sonic.sh
supersonic/: __init__.py  cli.py  config.py  events.py  schedule.py  server.py  store.py  suggest.py  validate.py  webhooks.py  workdir.py
supersonic/agents/: __init__.py  patch_mode.py  pty_runner.py  runner.py  sandbox_runner.py  worktree.py
supersonic/integrations/: __init__.py  git_ops.py  github.py  linear.py  notify.py
supersonic/loop/: __init__.py  bandit.py  checkpoint.py  dependency_mapper.py  multi_repo.py  orchestrator.py  planner.py  race.py  replay.py  rollback.py
supersonic/memory/: __init__.py  distill.py  (+4 more)
tests/: test_agent_runner.py  test_bandit.py  test_checkpoint_rollback.py  test_cli_replay.py  test_cli_verify_receipts.py  test_critic_escalation.py  test_dependency_mapper.py  test_dependency_trust.py  test_ledger.py  test_live_syntax_watch.py  test_multi_repo.py  test_orchestrator_dle.py  test_patch_mode.py  test_providers.py  test_pty_runner.py  test_qa.py  test_receipts.py  test_replay.py  test_review_risk.py  test_risk_escalation.py  test_rules_engine.py  test_sandbox_runner.py  test_secret_leak.py  test_server_replay.py  test_store.py  test_syntax_shield.py  test_telemetry_gate.py  test_test_quality.py  test_verify.py
web/: index.html
(+39 files in other folders)
