[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "supersonic"
version = "1.0.0"
description = "Supersonic — a Checkpoint/Verify/Rollback build loop with a structured Continuity Graph memory and bandit-gated Agent Racing across coding-agent backends."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
research = ["tavily-python>=0.5.0"]

[project.scripts]
sonic = "supersonic.cli:main"

[tool.setuptools.packages.find]
include = ["supersonic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
